// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton renders correctly - default 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 10,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": undefined,
              "width": 0,
            },
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "transform": [
              {
                "translateY": undefined,
              },
              {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <LinearGradient
        colors={
          [
            "#202020",
            "#0d0d0d",
          ]
        }
        end={
          {
            "x": 0,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.9018,
          ]
        }
        start={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 154, 109, 0.25)",
            "borderRadius": 8,
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Pay Now
        </Text>
        <View
          style={
            [
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "bottom": 0,
                "height": 8,
                "left": 0,
                "position": "absolute",
                "right": 0,
              },
              {
                "opacity": undefined,
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.6)",
              "bottom": 0,
              "height": 1,
              "left": 0,
              "position": "absolute",
              "right": 2,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.4)",
              "bottom": 0,
              "position": "absolute",
              "right": 0,
              "top": 4,
              "width": 1,
            }
          }
        />
      </LinearGradient>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - disabled 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#202020",
          "borderRadius": 12,
          "borderWidth": 1,
          "justifyContent": "center",
          "padding": 16,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#444444",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 16,
            "lineHeight": 24,
            "textAlign": "center",
          }
        }
      >
        Pay Now
      </Text>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - loading 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#202020",
          "borderRadius": 12,
          "borderWidth": 1,
          "justifyContent": "center",
          "padding": 16,
          "width": "100%",
        }
      }
    >
      <ActivityIndicator
        color="#444444"
        size="small"
      />
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - not full width 1`] = `
<View
  accessibilityLabel="Submit"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 10,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": undefined,
              "width": 0,
            },
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "transform": [
              {
                "translateY": undefined,
              },
              {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <LinearGradient
        colors={
          [
            "#202020",
            "#0d0d0d",
          ]
        }
        end={
          {
            "x": 0,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.9018,
          ]
        }
        start={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 154, 109, 0.25)",
            "borderRadius": 8,
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Submit
        </Text>
        <View
          style={
            [
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "bottom": 0,
                "height": 8,
                "left": 0,
                "position": "absolute",
                "right": 0,
              },
              {
                "opacity": undefined,
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.6)",
              "bottom": 0,
              "height": 1,
              "left": 0,
              "position": "absolute",
              "right": 2,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.4)",
              "bottom": 0,
              "position": "absolute",
              "right": 0,
              "top": 4,
              "width": 1,
            }
          }
        />
      </LinearGradient>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - without divider 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 10,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": undefined,
              "width": 0,
            },
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "transform": [
              {
                "translateY": undefined,
              },
              {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <LinearGradient
        colors={
          [
            "#202020",
            "#0d0d0d",
          ]
        }
        end={
          {
            "x": 0,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.9018,
          ]
        }
        start={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 154, 109, 0.25)",
            "borderRadius": 8,
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Continue
        </Text>
        <View
          style={
            [
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "bottom": 0,
                "height": 8,
                "left": 0,
                "position": "absolute",
                "right": 0,
              },
              {
                "opacity": undefined,
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.6)",
              "bottom": 0,
              "height": 1,
              "left": 0,
              "position": "absolute",
              "right": 2,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.4)",
              "bottom": 0,
              "position": "absolute",
              "right": 0,
              "top": 4,
              "width": 1,
            }
          }
        />
      </LinearGradient>
    </View>
  </View>
</View>
`;
